--- a/index.html
+++ b/index.html
@@ -1,40 +1,78 @@
+
 <html>
-    <head>inicial 
-    <script>
-    function calcular() {
-      // Pegar os valores dos inputs
-        var odd1 = parseFloat(document.getElementById("odd1").value);
-          var odd2 = parseFloat(document.getElementById("odd2").value);
-            var valorTotal = parseFloat(document.getElementById("valorTotal").value);
+<head>
+<script>
+function calcular() {
+  // Pegar os valores dos inputs
+    var odd1 = parseFloat(document.getElementById("odd1").value);
+      var odd2 = parseFloat(document.getElementById("odd2").value);
+        var valorTotal = parseFloat(document.getElementById("valorTotal").value);
 
-              // Calcular os valores apostados em cada resultado
-                var valorApostado1 = (odd2 * valorTotal) / (odd1 + odd2);
-                  var valorApostado2 = valorTotal - valorApostado1;
+          // Calcular os valores apostados em cada resultado
+            var valorApostado1 = (odd2 * valorTotal) / (odd1 + odd2);
+              var valorApostado2 = valorTotal - valorApostado1;
 
-                    // Calcular o lucro em cada resultado
-                      var lucro1 = (valorApostado1 * (odd1 - 1)) - (valorApostado2 * (odd2 - 1));
-                        var lucro2 = (valorApostado2 * (odd2 - 1)) - (valorApostado1 * (odd1 - 1));
+                // Calcular o lucro em cada resultado
+                  var lucro1 = (valorApostado1 * (odd1 - 1)) - (valorApostado2 * (odd2 - 1));
+                    var lucro2 = (valorApostado2 * (odd2 - 1)) - (valorApostado1 * (odd1 - 1));
 
-                          // Mostrar os resultados na tela
-                            document.getElementById("resultado").innerHTML =
-                                "Valor Apostado no Resultado 1: " + valorApostado1.toFixed(2) + "<br>" +
-                                    "Valor Apostado no Resultado 2: " + valorApostado2.toFixed(2) + "<br>" +
-                                        "Lucro no Resultado 1: " + lucro1.toFixed(2) + "<br>" +
-                                            "Lucro no Resultado 2: " + lucro2.toFixed(2);
-                                            }
-                                            </script>
-                                            </head>
-                                            <body>
-                                            <h3>Calculadora de Arbitragem</h3>
-                                            <p>Insira os valores das odds e do valor total que você quer apostar.</p>
-                                            <p>Odd do Resultado 1: <input type="number" id="odd1" value="0"></p>
-                                            <p>Odd do Resultado 2: <input type="number" id="odd2" value="0"></p>
-                                            <p>Valor Total: <input type="number" id="valorTotal" value="0"></p>
-                                            <button onclick="calcular()">Calcular</button>
+                      // Mostrar os resultados na tela
+                        document.getElementById("resultado").innerHTML =
+                            "Valor Apostado no Resultado 1: " + valorApostado1.toFixed(2) + "<br>" +
+                                "Valor Apostado no Resultado 2: " + valorApostado2.toFixed(2) + "<br>" +
+                                    "Lucro no Resultado 1: " + lucro1.toFixed(2) + "<br>" +
+                                        "Lucro no Resultado 2: " + lucro2.toFixed(2);
+                                        }
+                                        </script>
+                                        </head>
+                                        <body>
 
-                                            <div id="resultado"></div>
+                                        <style>
+                                        * {
+                                          box-sizing: border-box;
+                                            margin: 0;
+                                              padding: 0;
+                                              }
 
-                                            </body>
-                                            </html>
+                                              h3 {
+                                                text-align: center;
+                                                  font-family: Arial, sans-serif;
+                                                    font-size: 24px;
+                                                      color: white;
+                                                        background-color: green;
+                                                          padding: 10px;
+                                                          }
 
-                                            ```
+                                                          p {
+                                                            margin: 10px;
+                                                            }
+
+                                                            input {
+                                                              width: 80%;
+                                                              }
+
+                                                              button {
+                                                                width: 20%;
+                                                                }
+
+                                                                div {
+                                                                  border: solid gray;
+                                                                  }
+
+                                                                  #resultado {
+                                                                    margin-top: -1px; /* para remover a borda dupla */
+                                                                    }
+                                                                    </style>
+                                                                    ```
+                                                                    <h3>Calculadora de Arbitragem</h3>
+                                                                    <p>Insira os valores das odds e do valor total que você quer apostar.</p>
+                                                                    <p>Odd do Resultado 1: <input type="number" id="odd1" value="0"></p>
+                                                                    <p>Odd do Resultado 2: <input type="number" id="odd2" value="0"></p>
+                                                                    <p>Valor Total: <input type="number" id="valorTotal" value="0"></p>
+                                                                    <button onclick="calcular()">Calcular</button>
+                                                                    <div id="resultado"></div>
+
+                                                                    </body>
+                                                                    </html>
+
+                                                                    
