--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ function calcular() {
               var valorApostado2 = valorTotal - valorApostado1;
 
                 // Calcular o lucro em cada resultado
-                  var lucro1 = (valorApostado1 * (odd1 - 1)) - (valorApostado2 * (odd2 - 1));
-                    var lucro2 = (valorApostado2 * (odd2 - 1)) - (valorApostado1 * (odd1 - 1));
+                  var lucro1 = (valorApostado1 * (odd1 )) ;
+                    var lucro2 = (valorApostado2 * (odd2 ));
 
                       // Mostrar os resultados na tela
                         document.getElementById("resultado").innerHTML =
@@ -74,5 +74,6 @@ function calcular() {
 
                                                                     </body>
                                                                     </html>
+
 
                                                                     
